--- a/priv/style.css
+++ b/priv/style.css
@@ -87,12 +87,16 @@ body {
   margin: 0.1em;
   width: var(--bullet-size);
   height: var(--bullet-size);
+  min-width: var(--bullet-size);
+  min-height: var(--bullet-size);
   box-sizing: border-box;
 
   text-align: center;
   vertical-align: baseline;
 
   font-family: "Helvetica", sans-serif;
+  text-decoration: none;
+}
 
 .bullet-group {
   display: inline flex;
