--- a/priv/style.css
+++ b/priv/style.css
@@ -80,6 +80,16 @@ body {
     z-index: -1;
     border-radius: 100%;
   }
+  &.bullet-diamond::before {
+    border-radius: 0;
+    transform: rotate(45deg);
+    width: calc(var(--bullet-size) / sqrt(2));
+    height: calc(var(--bullet-size) / sqrt(2));
+    top: 0;
+    /* Why does this work? I have no clue. But it really seems to. */
+    /* Needed to center the diamond under the text */
+    left: calc(1em / sqrt(2) / 3);
+  }
   z-index: 0;
 
   display: inline-block;
@@ -107,16 +117,17 @@ body {
   text-decoration: none;
 
   box-sizing: border-box;
-  --height: calc(var(--padding) + var(--bullet-size));
+  --height: calc(2 * var(--padding) + var(--bullet-size));
   height: var(--height);
 
-  --padding: 0.5em;
-  padding: 0 calc(var(--padding) / 2);
+  --padding: 0.25em;
+  padding: 0 var(--padding);
+  margin: 0 calc(var(--padding) / 2);
   border-radius: var(--height);
 
   .route-bullet {
     margin: 0;
-    margin-top: var(--padding);
+    margin-top: calc(var(--bullet-size) / 3);
   }
 
   &:is(a) {
