Always use normal font weight in route bullets

--- a/server/priv/style.css
+++ b/server/priv/style.css
@@ -110,6 +110,7 @@ body {
   vertical-align: baseline;
 
   font-family: "Helvetica", sans-serif;
+  font-weight: normal;
   text-decoration: none;
 }
 
