Add todo for bullet styling issues on mobile

--- a/server/priv/style.css
+++ b/server/priv/style.css
@@ -100,6 +100,8 @@ body {
 
   display: inline-block;
   box-sizing: border-box;
+  /* TODO: removing this breaks firefox desktop (and maybe safari desktop) but
+  *        fixes safari mobile?? unclear how safari desktop behaves */
   padding-top: 0.1em;
   width: var(--bullet-size);
   height: 1lh;
